--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <div class="navbar">
-
+        <div class="navbar_hp">
+            <h4>HP :</h4>
+            <h3 id='hp'>100</h3>
+        </div>
+        <div class="navbar_score">
+            <h4>SCORE :</h4>
+            <h3 id='score'>0</h3>
+        </div>
+        <div class="navbar_level">
+            <h4>LEVEL :</h4>
+            <h3 id='level'>1</h3>
+        </div>
     </div>
     <div class="main">
 
